# Code

./: .condarc  .gitignore  EQUITY_L.csv  README.md  SMA_0.csv  SMA_1.csv  capstone.ipynb  environment.yml  good_tickers.csv  helpers.py  india.ipynb  init.sh  pyproject.toml  test.ipynb  test_sma.csv  tickers.csv  vectorbt.ipynb
data/: A.parquet  AA.parquet  AAL.parquet  AAP.parquet  AAPL.parquet  AAU.parquet  ABB.parquet  ABBV.parquet  ABC.parquet  ABG.parquet  ABMD.parquet  ABT.parquet  AC.parquet  ACC.parquet  ACCO.parquet  ACE.parquet  ACEL.parquet  ACM.parquet  ACN.parquet  ACP.parquet  ACRE.parquet  ACV.parquet  ACY.parquet  ADBE.parquet  ADC.parquet  ADCT.parquet  ADI.parquet  ADL.parquet  ADM.parquet  ADNT.parquet  ADP.parquet  ADSK.parquet  ADT.parquet  ADX.parquet  AE.parquet  AEB.parquet  AEE.parquet  AEF.parquet  AEFC.parquet  AEG.parquet  (+2105 more)
indian_stocks/: CIPLA.NS.parquet  COALINDIA.NS.parquet  HDFCLIFE.NS.parquet  HEROMOTOCO.NS.parquet  HINDALCO.NS.parquet  INDUSINDBK.NS.parquet  KOTAKBANK.NS.parquet  LT.NS.parquet  NESTLEIND.NS.parquet  NTPC.NS.parquet  TECHM.NS.parquet  ULTRACEMCO.NS.parquet  WIPRO.NS.parquet
strategies/: bbands_strategy.py  macd_strategy.py  sma_strategy.py  strategy.py
utils/: backtest.py  get_data.py  run_backtest.py  tempCodeRunnerFile.py
